contrast fixes

--- a/stylesheets/_interests.scss
+++ b/stylesheets/_interests.scss
@@ -51,8 +51,9 @@ $small: 728px;
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
-            background-color: darkgrey;
 
+            background-color: rgba($color: #000000, $alpha: 0.7);
+            color: white;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -60,10 +61,12 @@ $small: 728px;
             @media screen and (max-width: $small) {
                 width: 300px;
             }
+            
             img {
                 width: 100%;
                 object-fit: cover;
                 object-position: center;
+                
                 overflow: hidden;
             }
             h2 {
