--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -159,7 +159,8 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: darkgrey;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
   border-radius: 15px;
   overflow: hidden;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
